codex-rs/tui/src/snapshots/codex_tui__cwd_prompt__tests__cwd_picker_selected_40x16.snap
---
source: tui/src/cwd_prompt.rs
expression: rendered
---

  Working directory · resume
  Session = latest cwd recorded in the
  resumed session                     
  Current = your current working      
  directory                           
↑
  3. Always use session directory
› 4. Always use current directory (/    
     Users/example/current)             



  enter continue · esc use session ·
  ⌃c quit
